2012-09-24  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_smpp.c: reverting the last commit, since this has no logical
      effect in fact, due that ASCII is the first byte range in UTF-8 anyway.
      We get the same result, but still go throught the convert routine which
      can be considered overhead.
      Thanks to Alexander Malysh who pointed this out and voted for a revert.
      
2012-09-21  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_smpp.c: fix missing conversion to internal encoding (UTF-8)
      if we receive IA5/ASCII payload content.
      Thanks to Donald Jackson <dj at kannel.org> for spotting this.
  
2012-08-31  Stipe Tolj  <stolj at kannel.org>
    * gwlib/dict.[ch]: added function dict_duplicate() allowing an easy
      logical content duplication of an existing Dict structure, added
      functions dict_traverse[_sorted]() which allow in Dict traversal without
      locking the Dict logically outside, before going into a traversal loop.
      The sorted version allows to pre-sort the data elements of the Dict
      via a custom sorting function, then traversing the elements in this
      sorted order.
      
2012-08-31 Alexander Malysh <amalysh at kannel.org>
    * gwlib/octstr.[ch]: added two new functions: octstr_str_search and octstr_str_rsearch.

2012-08-31 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_http.c: fixed segfault produced by last commit.

2012-08-29 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/http/*.c, gw/smsc/smsc_http.c: splitted HTTP SMSC submodules into files.
      This allow us to reduce code in HTTP SMSC itself and prepare this SMSC for
      dynamicaly loading of submodules.
      No behavior change in any implementation.

2012-08-22 Alexander Malysh <amalysh at kannel.org>
    * gwlib/octstr.c: replaced old hash funtion with hash from Robert Sedgewick.

2012-08-06 Andreas Fink <andreas at fink.org>
    * gw/smsc/smsc_at.c: fixed a bug which crashed bearerbox if no