@@ -1,3 +1,6 @@
+2012-09-26 Alexander Malysh <amalysh at kannel.org>
+    * gw/smsc/http/generic.c: fixed segfault and mem leak.
+
 2012-09-24  Stipe Tolj  <stolj at kannel.org>
     * gw/smsc/smsc_smpp.c: reverting the last commit, since this has no logical
       effect in fact, due that ASCII is the first byte range in UTF-8 anyway.
